--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         function validatePassword() {
             let password = document.getElementById("password").value;
             if (password === "selesai") {
-                alert("Password benar, akses diterima.");
+                alert("Password benar, pekerjaan selesai.");
                 return true;
             } else {
-                alert("Password salah, coba lagi.");
+                alert("sign error");
                 return false;
             }
         }
