--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         
         <div class="mt-4">
             <h3>Kegiatan praktikum SIGWEB</h3>
-            <p>Praktikum sigweb melakukan kegiatan dimana mahasiswa belajar untuk membangun web</p>
+            <p>Praktikum <b>sigweb</b> melakukan kegiatan dimana mahasiswa belajar untuk membangun <i>web</i>
+	    praktikum sigweb melakukan latihan membuat web dengan html, css, dan javascript.
+	    dipelajari juga bootstrap dan leafletjs untuk mendukung pembuatan sig pada web</p>
         </div>
         
         <div class="mt-4 text-center">
