--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
         </table>
         
         <div class="mt-4">
-            <h3>Kegiatan praktikum SIGWEB</h3>
+            <h2>Kegiatan praktikum SIGWEB</h2>
             <p>Praktikum <b>sigweb</b> melakukan kegiatan dimana mahasiswa belajar untuk membangun <i>web</i>
 	    praktikum sigweb melakukan latihan membuat web dengan html, css, dan javascript.
 	    dipelajari juga bootstrap dan leafletjs untuk mendukung pembuatan sig pada web</p>
+		<p style="color:red"> html, css dan java script </p>
+		<p style="color:blue"> adalah bahasa pemrograman web </p>
         </div>
         
         <div class="mt-4 text-center">
