--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
         }
     </script>
 
+<h3>Peta Fakultas di UGM</h3>
+<div id="map" style="height: 400px;"></div>
+	
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
