--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
         });
     </script>
 
+	<div>
+	<h3>Peta Fakultas di UGM</h3>
+	<div id="map" style="height: 400px;"></div>	
+	</div>
+	
     <script>
         function validatePassword() {
             let password = document.getElementById("password").value;
@@ -91,9 +96,6 @@
             }
         }
     </script>
-
-<h3>Peta Fakultas di UGM</h3>
-<div id="map" style="height: 400px;"></div>
 	
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
